syntax = "proto3";

package veripass.v1;

message Admin {
    string email = 1;
    string name = 2;
    string hostel = 3;
    bool can_add_pass = 4;
}

service AdminService {
    rpc GetAdmin(GetAdminRequest) returns (Admin); 
}

message GetAdminRequest {
    string email = 1;
}