syntax = "proto3";

package veripass.v1;

import "google/protobuf/empty.proto";

message User {
  string id = 1;
  string name = 2;
  string room = 3;
  string hostel = 4;
  string phone = 5;
}

service UserService {
  rpc Entry(EntryRequest) returns (google.protobuf.Empty);
  rpc Exit(ExitRequest) returns (ExitResponse);
  rpc GetPhoto(GetPhotoRequest) returns (GetPhotoResponse);
  rpc GetUser(GetUserRequest) returns (User);
}

message EntryRequest {
  string pass_id = 1;
}

message ExitRequest {
  string id = 1;
  enum ExitType {
    EXIT_TYPE_UNSPECIFIED = 0;
    EXIT_TYPE_CLASS = 1;
    EXIT_TYPE_MARKET = 2;
    EXIT_TYPE_HOME = 3;
    EXIT_TYPE_EVENT = 4;
  }
  ExitType type = 2;
}

message ExitResponse {
  string pass_id = 1;
}

message GetUserRequest {
  string id = 1;
}

message GetPhotoRequest {
  string id = 1;
}

message GetPhotoResponse {
  bytes photo = 1;
}
